--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,6 +20,8 @@
 	src: url('../fonts/exo2black.woff2') format('woff2'), url('../fonts/exo2black.woff') format('woff'), url('../fonts/exo2black.ttf') format('truetype')
 	font-weight: black
 	font-style: normal
+section
+	max-width: 1440px
 .complect
 	color: #8B8B8B
 	background: #F3F3F3
