--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,6 +22,7 @@
 	font-style: normal
 section
 	max-width: 1440px
+	margin: 0 auto
 .complect
 	color: #8B8B8B
 	background: #F3F3F3
@@ -70,5 +71,3 @@ section
 		line-height: normal
 		font-size: 18px
 		color: #000000
-
-			
