--- a/sass/style.sass
+++ b/sass/style.sass
@@ -73,3 +73,31 @@ section
 		line-height: normal
 		font-size: 18px
 		color: #000000
+
+.magazine__comp
+	background: linear-gradient(270deg, #00C491 0%, #00CE60 100%)
+	text-align: center
+	font-style: normal
+	font-weight: bold
+	line-height: normal
+	font-size: 24px
+	color: #FFFFFF
+	padding: 30px 0px
+.main-manu
+	padding: 0
+	margin: 0
+	list-style: none
+	li
+		float: left
+		margin-right: 45px
+		a
+			font-style: normal
+			font-weight: 600
+			line-height: normal
+			font-size: 18px
+			color: #999999
+			&:hover
+				text-decoration: none
+				
+
+		
