--- a/css/style.css
+++ b/css/style.css
@@ -76,4 +76,31 @@ section {
   font-size: 18px;
   color: #000000; }
 
+.magazine__comp {
+  background: -webkit-gradient(linear, right top, left top, from(#00C491), to(#00CE60));
+  background: linear-gradient(270deg, #00C491 0%, #00CE60 100%);
+  text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 24px;
+  color: #FFFFFF;
+  padding: 30px 0px; }
+
+.main-manu {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+  .main-manu li {
+    float: left;
+    margin-right: 45px; }
+    .main-manu li a {
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      font-size: 18px;
+      color: #999999; }
+      .main-manu li a:hover {
+        text-decoration: none; }
+
 /*# sourceMappingURL=style.css.map */
