--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 @font-face {
   font-family: "exo2";
@@ -42,7 +43,8 @@ section {
 .review-but a {
   display: block;
   background: linear-gradient(91.33deg, #F42214 0.19%, #FAAB00 99.77%);
-  box-shadow: 0px 8px 32px rgba(244, 34, 20, 0.38);
+  -webkit-box-shadow: 0px 8px 32px rgba(244, 34, 20, 0.38);
+          box-shadow: 0px 8px 32px rgba(244, 34, 20, 0.38);
   border-radius: 6px;
   width: 255px;
   text-align: center;
