--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,38 @@ section {
   max-width: 1440px;
   margin: 0 auto; }
 
+.nextArrow-slick {
+  font-size: 40px;
+  cursor: pointer;
+  color: rgba(124, 132, 149, 0.5); }
+
+.prevArrow-slick {
+  font-size: 40px;
+  cursor: pointer;
+  color: rgba(124, 132, 149, 0.5); }
+
+.top-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 850px; }
+
+.slick-dots {
+  margin-bottom: 40px; }
+  .slick-dots li button {
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
+    background-color: #979797; }
+  .slick-dots li .slick-active {
+    background-color: #F65E0B; }
+
 .complect {
   color: #8B8B8B;
   background: #F3F3F3;
