--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
+body {
+  overflow-x: hidden; }
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both; }
 
 @font-face {
   font-family: "exo2";
@@ -37,6 +45,10 @@ section {
   line-height: normal;
   font-size: 12px; }
 
+.header {
+  margin-top: 35px;
+  margin-bottom: 30px; }
+
 .logo img {
   max-width: 100%; }
 
@@ -57,24 +69,28 @@ section {
   .review-but a:hover {
     text-decoration: none; }
 
-.tel .tel__href {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  font-size: 18px;
-  color: #000000;
-  text-decoration: none; }
-  .tel .tel__href:hover {
+.tel {
+  margin-top: 20px; }
+  .tel .tel__href {
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    font-size: 18px;
+    color: #000000;
     text-decoration: none; }
+    .tel .tel__href:hover {
+      text-decoration: none; }
 
-.mail .mail__href {
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  font-size: 18px;
-  color: #000000; }
+.mail {
+  margin-top: 20px; }
+  .mail .mail__href {
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    font-size: 18px;
+    color: #000000; }
 
 .magazine__comp {
   background: -webkit-gradient(linear, right top, left top, from(#00C491), to(#00CE60));
@@ -90,7 +106,8 @@ section {
 .main-manu {
   padding: 0;
   margin: 0;
-  list-style: none; }
+  list-style: none;
+  padding: 30px 0px; }
   .main-manu li {
     float: left;
     margin-right: 45px; }
@@ -102,5 +119,25 @@ section {
       color: #999999; }
       .main-manu li a:hover {
         text-decoration: none; }
+
+.earth-left {
+  font-style: normal;
+  font-weight: bold;
+  line-height: normal;
+  font-size: 18px;
+  color: #636363; }
+
+.left-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: left; }
+  .left-menu li a {
+    display: block;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 31px;
+    font-size: 14px;
+    color: #9A9A9A; }
 
 /*# sourceMappingURL=style.css.map */
