--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,12 @@
+body
+	overflow-x: hidden
 *
 	box-sizing: border-box
+.clearfix::after 
+	content: ""
+	display: table
+	clear: both
+
 @font-face
 	font-family: 'exo2'
 	src: url('../fonts/exo2.woff2') format('woff2'), url('../fonts/exo2.woff') format('woff'), url('../fonts/exo2.ttf') format('truetype')
@@ -34,7 +41,10 @@ section
 	font-weight: normal
 	line-height: normal
 	font-size: 12px
-
+.header
+	margin-top: 35px
+	margin-bottom: 30px
+	// padding: 20px 0px
 .logo
 	img
 		max-width: 100%
@@ -55,6 +65,7 @@ section
 		&:hover
 			text-decoration: none
 .tel
+	margin-top: 20px
 	.tel__href
 		font-family: 'Open Sans', sans-serif
 		font-style: normal
@@ -66,6 +77,7 @@ section
 		&:hover
 			text-decoration: none
 .mail
+	margin-top: 20px
 	.mail__href
 		font-family: 'Open Sans', sans-serif
 		font-style: normal
@@ -87,6 +99,7 @@ section
 	padding: 0
 	margin: 0
 	list-style: none
+	padding: 30px 0px
 	li
 		float: left
 		margin-right: 45px
@@ -98,3 +111,28 @@ section
 			color: #999999
 			&:hover
 				text-decoration: none
+.earth-left
+	font-style: normal
+	font-weight: bold
+	line-height: normal
+	font-size: 18px
+	color: #636363
+.left-menu
+	padding: 0
+	margin: 0
+	list-style: none
+	
+	text-align: left
+	li
+
+		a
+			display: block
+			font-style: normal
+			font-weight: normal
+			line-height: 31px
+			font-size: 14px
+			color: #9A9A9A
+			
+.wraping
+	
+	
