--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,21 @@ section {
   width: 850px; }
 
 .slick-dots {
-  margin-bottom: 40px; }
-  .slick-dots li button {
-    width: 16px;
-    height: 16px;
-    border-radius: 16px;
-    background-color: #979797; }
-  .slick-dots li .slick-active {
+  margin-bottom: 40px;
+  margin-left: -5px;
+  margin-bottom: 43px; }
+  .slick-dots li {
+    margin: 10px; }
+    .slick-dots li button {
+      width: 16px;
+      height: 16px;
+      border-radius: 16px;
+      background-color: #979797; }
+  .slick-dots .slick-active button {
     background-color: #F65E0B; }
+
+.slick-dots li button:before {
+  content: ""; }
 
 .complect {
   color: #8B8B8B;
@@ -134,5 +141,92 @@ section {
       color: #999999; }
       .main-manu li a:hover {
         text-decoration: none; }
+
+.new-shop .new-shop__title {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  font-size: 18px;
+  color: #636363;
+  margin-top: 50px;
+  margin-left: 50px; }
+.new-shop .new-shop__slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 800px;
+  margin-top: 22px; }
+  .new-shop .new-shop__slider .new-shop__slider__list-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 230px;
+    max-width: 230px;
+    height: 370px;
+    border: 1px solid #EBEBEB;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    border-radius: 10px;
+    margin: 0 18px; }
+    .new-shop .new-shop__slider .new-shop__slider__list-item img {
+      width: 160px;
+      height: 160px;
+      max-width: 160px;
+      max-height: 160px;
+      margin-top: 20px; }
+    .new-shop .new-shop__slider .new-shop__slider__list-item span {
+      font-family: Open Sans;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      font-size: 14px;
+      text-align: center;
+      color: #636363;
+      margin-top: 20px;
+      margin-left: 3px; }
+    .new-shop .new-shop__slider .new-shop__slider__list-item p {
+      font-family: Open Sans;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      font-size: 18px;
+      text-align: center;
+      margin-top: 20px; }
+    .new-shop .new-shop__slider .new-shop__slider__list-item div {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      width: 130px;
+      height: 36px;
+      background: -webkit-gradient(linear, left top, left bottom, from(#F9AB2A), to(#F11C24));
+      background: linear-gradient(180deg, #F9AB2A 0%, #F11C24 100%);
+      border-radius: 6px;
+      font-family: Open Sans;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      font-size: 14px;
+      color: #FFFFFF;
+      margin-top: 10px; }
 
 /*# sourceMappingURL=style.css.map */
