--- a/sass/style.sass
+++ b/sass/style.sass
@@ -70,7 +70,12 @@ section
 .logo
 	img
 		max-width: 100%
+.wrap-line-menu
+	margin-bottom: 30px
 .review-but
+	// float: right
+	margin-left: 30px
+	
 	a
 		display: block
 		background: linear-gradient(91.33deg, #F42214 0.19%, #FAAB00 99.77%)
@@ -88,6 +93,7 @@ section
 			text-decoration: none
 .tel
 	margin-top: 20px
+	margin-left: 30px
 	.tel__href
 		font-family: 'Open Sans', sans-serif
 		font-style: normal
@@ -143,7 +149,7 @@ section
 	padding: 0
 	margin: 0
 	list-style: none
-	
+	margin-bottom: 20px
 	text-align: left
 	li
 
@@ -154,6 +160,12 @@ section
 			line-height: 31px
 			font-size: 14px
 			color: #9A9A9A
+			
+				
+			span
+				width: 30px
+				float: right
+				
 			
 .wraping
 	
