--- a/sass/style.sass
+++ b/sass/style.sass
@@ -77,7 +77,9 @@ section
 	img
 		max-width: 100%
 .wrap-line-menu
-	margin-bottom: 30px
+	// padding-bottom: 30px
+		// padding-left: 0!important
+		// padding-right: 0!important
 .review-but
 	// float: right
 	margin-left: 30px
@@ -133,10 +135,14 @@ section
 	padding: 0
 	margin: 0
 	list-style: none
-	padding: 30px 0px
+	padding: 33px 0px
+	background: #FFFFFF
+	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08)
 	li
 		float: left
 		margin-right: 45px
+		&:first-child
+			padding-left: 50px
 		a
 			font-style: normal
 			font-weight: 600
@@ -218,13 +224,19 @@ section
 	line-height: normal
 	font-size: 18px
 	color: #636363
+	margin: 0
+.wwrpa
+	background: #F4F4F4
+	padding-left: 80px
+	padding-top: 30px
 .left-menu
 	padding: 0
 	margin: 0
 	list-style: none
 	margin-bottom: 20px
-
+	// background: #F4F4F4
 	text-align: left
+	// padding-top: 30px
 	li
 
 		a
@@ -237,5 +249,4 @@ section
 			span
 				width: 30px
 				float: right
-				
-.wraping
+
