--- a/sass/style.sass
+++ b/sass/style.sass
@@ -43,6 +43,7 @@ section
 	justify-content: center
 	align-items: center
 	width: 850px
+	margin-top: 70px
 .slick-dots
 	margin-bottom: 40px
 	margin-left: -5px
@@ -77,13 +78,12 @@ section
 	img
 		max-width: 100%
 .wrap-line-menu
-	// padding-bottom: 30px
-		// padding-left: 0!important
-		// padding-right: 0!important
+	// margin-bottom: 30px
+
 .review-but
 	// float: right
 	margin-left: 30px
-
+	
 	a
 		display: block
 		background: linear-gradient(91.33deg, #F42214 0.19%, #FAAB00 99.77%)
@@ -137,12 +137,11 @@ section
 	list-style: none
 	padding: 33px 0px
 	background: #FFFFFF
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08)
+	// box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08)
 	li
+
 		float: left
 		margin-right: 45px
-		&:first-child
-			padding-left: 50px
 		a
 			font-style: normal
 			font-weight: 600
@@ -217,35 +216,6 @@ section
 				font-size: 14px
 				color: #FFFFFF
 				margin-top: 10px
-.information-text
-	width: 750px
-	margin-left: -27px
-	p
-		font-family: Open Sans
-		font-style: normal
-		font-weight: normal
-		line-height: 26px
-		font-size: 16px
-		color: #636363
-	ul
-		margin-top: 28px
-		margin-left: -41px
-		list-style-type: none
-		li
-			font-family: Open Sans
-			font-style: normal
-			font-weight: normal
-			line-height: 26px
-			font-size: 16px
-			color: #636363
-	.information-text__title
-		font-family: Open Sans
-		font-style: normal
-		font-weight: 600
-		line-height: 29px
-		font-size: 18px
-		color: #000000
-		margin-top: 95px
 
 .earth-left
 	font-style: normal
@@ -254,18 +224,14 @@ section
 	font-size: 18px
 	color: #636363
 	margin: 0
-.wwrpa
-	background: #F4F4F4
-	padding-left: 80px
-	padding-top: 30px
+	margin-bottom: 10px
 .left-menu
 	padding: 0
 	margin: 0
 	list-style: none
 	margin-bottom: 20px
-	// background: #F4F4F4
+
 	text-align: left
-	// padding-top: 30px
 	li
 
 		a
@@ -274,7 +240,13 @@ section
 			font-weight: normal
 			line-height: 31px
 			font-size: 14px
-			color: #9A9A9A
+			color: #9A9A9A	
 			span
 				width: 30px
 				float: right
+				
+.wraps
+	background: #F4F4F4
+	padding-top: 40px
+	padding-left: 90px
+	padding-bottom: 40px
