--- a/sass/style.sass
+++ b/sass/style.sass
@@ -221,6 +221,7 @@ section
 		line-height: 26px
 		font-size: 16px
 		color: #636363
+		margin-top: 27px
 	ul
 		margin-top: 28px
 		margin-left: -41px
