--- a/sass/style.sass
+++ b/sass/style.sass
@@ -75,6 +75,8 @@ section
 	margin-bottom: 30px
 	// padding: 20px 0px
 .logo
+	margin-left: -50px
+	margin-top: -5px
 	img
 		max-width: 100%
 .wrap-line-menu
@@ -82,7 +84,7 @@ section
 
 .review-but
 	// float: right
-	margin-left: 30px
+	margin-right: -30px
 	
 	a
 		display: block
