--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,6 @@
 body
 	overflow-x: hidden
+	font-family: 'exo2', sans-serif
 *
 	box-sizing: border-box
 .clearfix::after
@@ -24,8 +25,8 @@ body
 	font-style: normal
 @font-face
 	font-family: 'exo2'
-	src: url('../fonts/exo2black.woff2') format('woff2'), url('../fonts/exo2black.woff') format('woff'), url('../fonts/exo2black.ttf') format('truetype')
-	font-weight: black
+	src: url('../fonts/exo2medium.woff2') format('woff2'), url('../fonts/exo2medium.woff') format('woff'), url('../fonts/exo2medium.ttf') format('truetype')
+	font-weight: medium
 	font-style: normal
 section
 	max-width: 1440px
@@ -85,9 +86,12 @@ section
 .review-but
 	// float: right
 	margin-right: -30px
+
 	
 	a
 		display: block
+		font-family: 'exo2', sans-serif
+		font-weight: normal
 		background: linear-gradient(91.33deg, #F42214 0.19%, #FAAB00 99.77%)
 		box-shadow: 0px 8px 32px rgba(244, 34, 20, 0.38)
 		border-radius: 6px
