--- a/sass/style.sass
+++ b/sass/style.sass
@@ -293,3 +293,8 @@ section
 	padding-top: 40px
 	padding-left: 90px
 	padding-bottom: 40px
+
+@media screen and (max-width: 890px)
+	.top-slider__list-item
+		img
+			width: 80%
