--- a/css/style.css
+++ b/css/style.css
@@ -210,12 +210,7 @@ section {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 230px;
-    max-width: 230px;
-    height: 370px;
     border: 1px solid #EBEBEB;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
     border-radius: 10px;
     margin: 0 18px; }
     .new-shop .new-shop__slider .new-shop__slider__list-item img {
@@ -329,8 +324,71 @@ section {
   padding-left: 90px;
   padding-bottom: 40px; }
 
-@media screen and (max-width: 890px) {
-  .top-slider__list-item img {
-    width: 80%; } }
+@media screen and (max-width: 1439px) {
+  .mail {
+    margin-left: 25px; }
+
+  .tel {
+    margin-left: 80px; } }
+@media screen and (max-width: 1355px) {
+  .main-manu {
+    margin-left: 20px; }
+    .main-manu li a {
+      font-size: 15px; } }
+@media screen and (max-width: 1200px) {
+  .media-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+
+  .media-container2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+  .logo {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 10px; }
+
+  .tel {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 10px; }
+
+  .mail {
+    margin: 0;
+    text-align: center;
+    margin-bottom: 10px; }
+
+  .review-but {
+    margin: 0; } }
+@media screen and (max-width: 770px) {
+  .main-manu {
+    text-align: center;
+    margin: 0; }
+    .main-manu li {
+      float: none;
+      padding-bottom: 10px;
+      margin-left: 0;
+      margin-right: 0; }
+      .main-manu li a {
+        padding-bottom: 0px; }
+
+  .wraps {
+    padding-left: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
