--- a/sass/style.sass
+++ b/sass/style.sass
@@ -43,9 +43,13 @@ section
 	display: flex
 	justify-content: center
 	align-items: center
-	width: 850px
+	width: 100%
 	margin-top: 50px
 	margin-left: 25px
+	&__list-item
+		img
+			max-width: 100%
+			margin: 0 auto
 .slick-dots
 	margin-bottom: 40px
 	margin-left: -5px
@@ -182,7 +186,7 @@ section
 			flex-direction: column
 			align-items: center
 			// width: 230px
-			// height: 370px
+			height: 370px
 			border: 1px solid #EBEBEB
 			// box-sizing: border-box
 			border-radius: 10px
@@ -227,7 +231,7 @@ section
 				color: #FFFFFF
 				margin-top: 10px
 .information-text
-	width: 750px
+	max-width: 750px
 	margin-top: 102px
 	margin-left: -3px
 	p
@@ -304,6 +308,9 @@ section
 			a
 				font-size: 15px
 @media screen and (max-width: 1200px)
+	.top-slider
+		margin: 0
+		margin-top: 30px
 	.media-container
 		display: flex
 		justify-content: center
@@ -326,9 +333,21 @@ section
 		margin-bottom: 10px
 	.review-but
 		margin: 0
+	.new-shop .new-shop__slider
+		margin: 0
+	.new-shop
+		margin: 0 auto
 @media screen and (max-width: 890px)
 	.new-shop .new-shop__slider
-		// width: 90%
+		width: 600px
+	.slick-dots
+		margin-left: 0
+		margin-bottom: 23px
+		li
+			button
+				width: 5px
+				height: 5px
+				border-radius: 5px
 @media screen and (max-width: 770px)
 	.main-manu
 		text-align: center
@@ -342,3 +361,6 @@ section
 				padding-bottom: 0px
 	.wraps
 		padding-left: 20px
+@media screen and (max-width: 630px)
+	.new-shop .new-shop__slider
+		width: 300px
